# ERP42

./: CMakeLists.txt  Control.py  Controller.py  RX_pc2erp.py  TX_erp2pc.py  package.xml
Test ROS communication/: Control.py  Controller.py  TX_erp2pc.py
Test_close_loop_comunication/: RX_pc2erp.py
devel-control/lateral-control/: bicycle model.py
devel-control/ma-rrt/: README.md
erp42-MORAI/: CMakeLists.txt  package.xml
erp42-MORAI/launch/: planner.launch
erp42-MORAI/rviz/: planner.rviz
erp42-MORAI/scripts/: Main_AD2.py  config.py  global_path_pub.py  utils.py
erp42-control-GUI/: .gitignore  README.md
erp42-control-GUI/ERP_Control/: ERPControl.pro  PCanConfPage.qml  PCanConfPageForm.ui.qml  Page2Form.ui.qml  main.cpp  main.qml  qml.qrc
erp42-ros/: README.md
erp42/scripts/: calc_mgeo_path.py  config.json  local_path_pub.py  (+2 more)
lateral-control/: bicycle model.py  cubic_spline.py  path prediction.py
launch/: erp42.launch  erp42_serial_planner.launch  gazeboerp42.launch  lidar.launch  path_maker.launch  run.launch  rviz.launch
ma-rrt/: README.md
ma-rrt/vehicle_msgs/: CMakeList.txt  package.xml
ma-rrt/vehicle_msgs/msg/: Command.msg  Track.msg
msg/: VehicleState.msg
path/: lidar_test.txt  multi-lane2.txt  multi-lane21.txt  newpath1.txt  newpath2.txt  newpath3.txt  path_name.txt
rviz/: planner.rviz
scripts/: erp42_planner1.py  global_planner.py  local_planner.py  main.py  mgeo_pub.py  path_maker.py  scen_config.py  terminal_server.py  tmp.py  tracker.py
src/: planner.cpp  talker.cpp  tmp.cpp  tracker.cpp  tracker1.cpp  tracker2.cpp
(+62 files in other folders)
