<package format="2">
    <name>vehicle_msgs</name>
    <version>0.0.1</version>
    <description>Messages for controlling the vehicle</description>
    <maintainer email="ekampourakis@ceid.upatras.gr">Emmanouil Kampourakis</maintainer>
    <maintainer email="boing0806@gmail.com">Jeong Boin</maintainer>
    
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <depend>std_msgs</depend>
</package>
